; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_xmalloc.c_xrecallocarray.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_xmalloc.c_xrecallocarray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [58 x i8] c"xrecallocarray: out of memory (%zu elements of %zu bytes)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xrecallocarray(i8* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = call i8* @recallocarray(i8* %10, i64 %11, i64 %12, i64 %13)
  store i8* %14, i8** %9, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %4
  %18 = load i64, i64* %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = call i32 @fatal(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i64 %18, i64 %19)
  br label %21

21:                                               ; preds = %17, %4
  %22 = load i8*, i8** %9, align 8
  ret i8* %22
}

declare dso_local i8* @recallocarray(i8*, i64, i64, i64) #1

declare dso_local i32 @fatal(i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
